fighting to make images appear

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
 body {
-    background-image: url("./Instant-Pot-Recipes.jpg");
+    /*background-image: url("./Instant-Pot-Recipes.jpg");
+
+     */
 }
