images worked, i just didnt specify the full URL,awesome!

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
-    /*background-image: url("./Instant-Pot-Recipes.jpg");
-
-     */
+    background: white;
+    background-image: radial-gradient(black 1px, transparent 0);
+    background-size: 40px 40px;
+    background-position: -19px -19px;
 }
