--- a/src/style.css
+++ b/src/style.css
@@ -1,42 +1,6 @@
 * {
     box-sizing: border-box;
 }
-body {
-    background: white;
-    background-image: radial-gradient(black 1px, transparent 0);
-    background-size: 40px 40px;
-    background-position: -19px -19px;
-}
-.navs_Recipe_list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-img {
-
-    width: 70%;
-    height:70%;
-    margin: 2%;
-}
-.Recipe_list {
-    text-align: center;
-    width: 70%;
-    height: 80%;
-    justify-content: space-between;
-    display: flex;
-    flex-wrap: wrap;
-}
-.Recipe {
-    border: 5px solid darkblue;
-    background-color: white;
-    height: 25rem;
-    width : 45%;
-    margin: 1%;
-}
-ul {
-    list-style-type: none;
-}
-
 .navbar {
     border-bottom: 1px solid #ccc;
     position: fixed;
@@ -46,11 +10,54 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
-    padding: 10px;
+    background-color: #fff;
+    padding: 30px;
+}
 
+.navs_Recipe_list {
+    margin-top : 8%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
 
 }
-nav {
-    background-color: bisque;
+.form {
+
+    background-color: gray;
+    border: 1px solid blue;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width : 20rem;
+    height: 25rem;
+}
+
+.recipe_list {
+    background-color: gray;
+    border: 1px solid blue;
+    display: flex;
+    flex-wrap :  wrap;
+    justify-content: space-between;
+    width: 60rem;
+    height: 100%;
+}
+
+.Recipe {
+    border-radius: 8px;
+    margin: 2.5rem;
+    display : flex;
+    flex-direction: column;
+    width: 40%;
+    height: 25rem;
+    background-color: aqua;
+    text-align: center;
+}
+
+.image img {
+    border-radius: 8px;
+    border-bottom-left-radius:0px ;
+    border-bottom-right-radius:0px ;
+    -moz-border-radius-topleft: 8px;
+    width: 100%;
+    height: 100%;
 }
