--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,22 @@
+
+
+
 * {
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 .navbar {
+    box-sizing: border-box;
     border-bottom: 1px solid #ccc;
     position: fixed;
     width: 100%;
+    height: 5rem;
     top: 0;
     z-index: 10;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
-    padding: 30px;
 }
 
 .navs_Recipe_list {
@@ -23,18 +28,17 @@
 }
 .form {
 
-    background-color: gray;
-    border: 1px solid blue;
+    box-sizing: border-box;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
-    width : 20rem;
-    height: 25rem;
+    width : 25rem;
+    height: 30rem;
+
 }
 
+
 .recipe_list {
-    background-color: gray;
-    border: 1px solid blue;
     display: flex;
     flex-wrap :  wrap;
     justify-content: space-between;
@@ -47,17 +51,156 @@
     margin: 2.5rem;
     display : flex;
     flex-direction: column;
-    width: 40%;
+    width: 25rem;
     height: 25rem;
-    background-color: aqua;
+    box-shadow: 10px 5px 5px #EDF4F4;
+
+}
+.Recipe div {
     text-align: center;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: auto;
 }
 
 .image img {
     border-radius: 8px;
     border-bottom-left-radius:0px ;
     border-bottom-right-radius:0px ;
-    -moz-border-radius-topleft: 8px;
-    width: 100%;
-    height: 100%;
+    width: 25rem;
+    height: 18rem;
+}
+.form {
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 16px;
+}
+
+.form * {
+    box-sizing: border-box;
+    line-height: 1.5;
+}
+
+.form__title {
+    font-size: 2em;
+    font-weight: 600;
+}
+
+.form__item {
+    display: flex;
+    flex-direction: column;
+}
+
+.form__item > * {
+    align-self: flex-start;
+}
+
+.form__label {
+    font-weight: 600;
+    padding: 10px 0;
+}
+
+.form__input {
+    -webkit-appearance: none;
+
+    width: 23rem;
+    max-width: 425px;
+
+    /* Fix for Safari/iOS date fields */
+    min-height: calc(0.9em + (0.8em * 2) + 0.6em);
+
+    padding: 0.8em;
+    font-size: 0.9em;
+    font-family: "Source Sans Pro", sans-serif;
+
+    outline: none;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+    background: #f9f9f9;
+    transition: background 0.25s, border-color 0.25s, color 0.25s;
+}
+
+.form__input:focus {
+    background: #ffffff;
+}
+
+.form__input::placeholder {
+    color: #bbbbbb;
+}
+
+.form__input--error {
+    color: #d50000;
+    background: #fff8f8;
+    border-color: #d50000;
+}
+
+.form__input--error::placeholder {
+    color: #ffbfbf;
+}
+
+.form__error {
+    padding-top: 10px;
+    color: #d50000;
+    font-size: 0.9em;
+    visibility: hidden;
+}
+
+.form__input--error + .form__error {
+    visibility: visible;
+}
+
+.form__input--small {
+    max-width: 250px;
+}
+
+textarea.form__input {
+    resize: none;
+    min-height: 200px;
+}
+
+.form__btn {
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 600;
+    font-size: 1.1em;
+    padding: 10px 16px;
+    margin: 1rem auto auto 0;
+
+    color: #ffffff;
+    background: #14b64a;
+    border: 2px solid #0fa942;
+    border-radius: 5px;
+
+    cursor: pointer;
+    outline: none;
+}
+
+.form__btn:active {
+    background: #0fa942;
+}
+.title {
+    display: flex;
+    flex-direction: row;
+}
+.button {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+.github  {
+    display: flex;
+    flex-direction: row;
+}
+.form__top  {
+    display: flex;
+    flex-direction: row;
+}
+.navbar svg {
+    width : 5rem;
+    margin : 1rem;
+}
+.word {
+    margin : 3.5rem 1rem auto 0.5rem;
+}
+.button svg {
+    margin-right : 2rem;
 }
