--- a/src/style.css
+++ b/src/style.css
@@ -212,3 +212,45 @@ textarea.form__input {
 .image  {
     margin: 0 0 0 0;
 }
+
+.nothing_found {
+    display :flex;
+    flex-direction: column;
+}
+.nothing_found img {
+    width: 100%;
+    height:70%;
+
+}
+.nothing_found h1 {
+   text-align: center;
+    font-size: 2rem;
+    font-weight: 500;
+}
+@media only screen and (max-width: 1240px) {
+    .navs_Recipe_list {
+        display: flex;
+        flex-direction: column;
+        margin-top: 10rem;
+    }
+
+    .nothing_found img {
+        width: 40%;
+        height:40%;
+
+    }
+    .nothing_found h1 {
+        text-align: start;
+    }
+}
+
+@media only screen and (max-width: 890px) {
+    .recipe_list {
+        display: flex;
+        flex-direction: column;
+    }
+
+}
+.title {
+    color: green;
+}
